--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/inputs.css">
     <link rel="stylesheet" href="css/layers.css">
     <link rel="stylesheet" href="css/webui.css">
+    <link rel="stylesheet" href="css/alerts.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/widgets.css">
+    <link rel="stylesheet" href="css/colors.css">
 </head>
 <body>
     <!-- <div class="input">
@@ -34,14 +40,40 @@
         <input type="week" name="" id="">
         <textarea name="" class="no-resize" id="" cols="30" rows="10"></textarea>
     </div> -->
-    <div class="buttons">
+    <!-- <div class="buttons">
         <button type="button">hello world</button>
         <button type="reset">hello world</button>
         <button disabled="disabled">hello world</button>
         <button type="submit">hello world</button>
         <button type="menu">hello world</button>
-    </div>
-    <div class="buttons">
+    </div> -->
+    <!-- <div class="notification top-right-notify">
+        <span class="text">You just got a message</span>
+        <span class="text black-font-25 font-small">Click this notification to check it out!</span>
+    </div> -->
+    <form action="http://localhost/NoSQL/api.php" method="get">
+        <div class="modal modal-25pc flex-column text-center pad-top-20px pad-bottom-20px pad-left-10px pad-right-10px floating-modal">
+            <div class="block width-100 pad-top-30px pad-bottom-30px">
+                <div class="webuilogo block text-align-center">
+                    <span class="webLogoTxt">web<span class="uiLogoTxt">UI</span></span>
+                </div>
+            </div>
+            <div class="block pad-top-5px pad-bottom-5px pad-left-10px">
+                <input type="email" name="email" id="email" placeholder="Email Address" class="width-90" required>
+            </div>
+            <div class="block pad-top-5px pad-bottom-5px pad-left-10px pad-bottom-15px">
+                <input type="password" name="password" id="psw" placeholder="Password" class="width-90" required>
+            </div>
+            <div class="block pad-5px">
+                <button type="submit" class="width-100 bg-dodgerblue white-font-100">Login</button>
+            </div>
+            <div class="block pad-10px cursor-pointer text-align-center">
+                <span class="text link font-small text-align-center">Fogort Password?</span>
+            </div>
+        </div>
+    </form>
+    <div class="alert alert-prompt dark-bg-alert cursor-pointer layer-1">
+        Welcome User, login to acess you WebUI Account
     </div>
 </body>
 </html>
