updated css library

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <span class="text">You just got a message</span>
         <span class="text black-font-25 font-small">Click this notification to check it out!</span>
     </div> -->
-    <form action="http://localhost/NoSQL/api.php" method="get">
+    <form action="http://localhost/NoSQL/api.php" method="get" id="chartTemplate">
         <div class="modal modal-25pc flex-column text-center pad-top-20px pad-bottom-20px pad-left-10px pad-right-10px floating-modal">
             <div class="block width-100 pad-top-30px pad-bottom-30px">
                 <div class="webuilogo block text-align-center">
@@ -75,5 +75,6 @@
     <div class="alert alert-prompt dark-bg-alert cursor-pointer layer-1">
         Welcome User, login to acess you WebUI Account
     </div>
+    <script src="js/chart.js"></script>
 </body>
 </html>
