made few changes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/widgets.css">
     <link rel="stylesheet" href="css/colors.css">
+    <link rel="stylesheet" href="css/animations.css">
 </head>
 <body>
     <!-- <div class="input">
@@ -52,10 +53,10 @@
         <span class="text black-font-25 font-small">Click this notification to check it out!</span>
     </div> -->
     <form action="http://localhost/NoSQL/api.php" method="get" id="chartTemplate">
-        <div class="modal modal-25pc flex-column text-center pad-top-20px pad-bottom-20px pad-left-10px pad-right-10px floating-modal">
+        <div class="modal modal-25 flex-column text-center pad-top-20px pad-bottom-20px pad-left-10px pad-right-10px floating-modal">
             <div class="block width-100 pad-top-30px pad-bottom-30px">
                 <div class="webuilogo block text-align-center">
-                    <span class="webLogoTxt">web<span class="uiLogoTxt">UI</span></span>
+                    <span class="webLogoTxt">Web<span class="uiLogoTxt">UI</span></span>
                 </div>
             </div>
             <div class="block pad-top-5px pad-bottom-5px pad-left-10px">
@@ -73,8 +74,9 @@
         </div>
     </form>
     <div class="alert alert-prompt dark-bg-alert cursor-pointer layer-1">
-        Welcome User, login to acess you WebUI Account
+        Welcome User, login to access you WebUI Account
     </div>
     <script src="js/chart.js"></script>
+    <script src="js/effects.js"></script>
 </body>
 </html>
